--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 .input-field *:focus {
-  box-shadow: 0 0 0 1.2rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 3px 5px rgba(0, 0, 0, 0.075);
 }
 
 .btn {
